feat: fully localize quiz UI text to Korean

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <main class="main-area">
         <section class="top-head card">
           <div>
-            <h2 id="case-title">Loading...</h2>
+            <h2 id="case-title">불러오는 중...</h2>
             <p id="case-meta" class="meta"></p>
           </div>
           <div class="head-actions">
@@ -72,7 +72,7 @@
               <button type="button" class="tf-tab" data-tf="5m">5분봉</button>
             </div>
             <div class="overlay-toggles">
-                <label><input id="toggle-ema" type="checkbox" checked /> EMA</label>
+                <label><input id="toggle-ema" type="checkbox" checked /> 이동평균선</label>
                 <label><input id="toggle-bb" type="checkbox" checked /> 볼린저밴드</label>
                 <label><input id="toggle-structure" type="checkbox" checked /> 구조선/작도</label>
             </div>
@@ -112,7 +112,7 @@
               <div class="score-row"><span>방향</span><strong id="score-dir">0</strong></div>
               <div class="score-row"><span>강도</span><strong id="score-move">0</strong></div>
               <div class="score-row"><span>스탑</span><strong id="score-stop">0</strong></div>
-              <div class="score-row total"><span>Total</span><strong id="score-total">0 / 100</strong></div>
+              <div class="score-row total"><span>총점</span><strong id="score-total">0 / 100</strong></div>
             </div>
           </section>
 
@@ -134,7 +134,7 @@
         </section>
 
         <section class="footer-note">
-          데이터 소스: 선택 백테스트 체결 + 멀티 타임프레임 OHLCV
+          데이터 소스: 선택 백테스트 체결 + 멀티 타임프레임 캔들 데이터
         </section>
       </main>
     </div>
